[SessionRestore] Clean up TabLoader every time when a test case is torn down.

Previously, we didn't reset |shared_tab_loader_| every time when a test cast
got torn down, resulting in DCHECK failure when we tried to restore tabs in
another test case. This patch resets |shared_tab_loader_| every time when a
test cases is being torn down.

BUG=793625

Change-Id: Ic21faedd1748f6c9d26f1d493d97f7679c8e2dca
Reviewed-on: https://chromium-review.googlesource.com/823250
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: lpy <lpy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523949}
Former-commit-id: 4a2337dde676a76d4bfb99bf1d92bd0efda57e29